# consulting-platform

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  package-lock.json  package.json
init/: 01-create-user-db.sql
