[tool.poetry]
name = "consulting-platform-backend"
version = "0.1.0"
description = ""
authors = ["Cem Tekelli"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
argon2-cffi = "^23.1.0"
python-jose = "^3.3.0"
pydantic = "^2.7.1"
python-multipart = "^0.0.9"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
factory-boy = "^3.3.0"
ruff = "^0.4.4"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
